<resources>
    <string name="app_name">My Application</string>


    <string name="app_dichvu">Dịch vụ</string>
    <string name="app_linhkien">Linh kiện</string>
    <string name="app_hoadon">Hóa đơn</string>
    <string name="app_thongketongquat">Thống kê tổng quát</string>
    <string name="app_thongkechitiet">Thống kê chi tiết</string>
    <string name="app_taikhoan">Tài khoản</string>
    <string name="app_doimatkhau">Đổi mật khẩu</string>

    <string name="nav_drawer_open">Open nav drawer</string>
    <string name="nav_drawer_close">Close nav drawer</string>"
    <string-array name="tinh_trang_array">
        <item>Đã sửa xong</item>
        <item>Đang xử lý</item>
    </string-array>
    <string-array name="Nhanvien_sua_array">
        <item>Nguyễn Thanh Toàn</item>
        <item>Đặng Hoàng Phúc</item>
        <item>Lê Minh Nhật</item>
        <item>Trần Duy Bảo</item>
        <item>Nguyễn Thành Đạt</item>
    </string-array>

</resources>